# iot-fp

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/audio/: CMakeLists.txt  audio.c
components/audio/include/: audio.h
components/config/: CMakeLists.txt  config.c
components/config/include/: config.h
components/logger/: CMakeLists.txt  logger.c
components/logger/include/: logger.h
components/mqttclient/: CMakeLists.txt  mqttclient.c
components/mqttclient/include/: mqttclient.h
components/myspiffs/: CMakeLists.txt  myspiffs.c
components/myspiffs/include/: myspiffs.h
components/network/: CMakeLists.txt  network.c
components/network/include/: network.h
components/player/: CMakeLists.txt  player.c
components/player/include/: player.h
components/touch/: CMakeLists.txt  touch.c
components/webserver/: CMakeLists.txt  foo.html  webserver.c
components/webserver/include/: webserver.h
main/: CMakeLists.txt  app_main.c  hello_world_main.c
